# Covid

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  README.md
include/: cmake_pch.cpp  cmake_pch.hpp
include/Aftermath/: NsightAftermathHelpers.h
include/Alter/: Alter.hpp  Context.hpp  Core.hpp  Denoiser.hpp  Device.hpp  Framebuffer.hpp  GeometryLevel.hpp  GltfLoader.hpp  Instance.hpp  InstanceLevel.hpp  MemoryAllocator.hpp  MemoryAllocatorVma.hpp  PingPong.hpp  Pipeline.hpp  PipelineLayout.hpp  QueueFamily.hpp  Resource.hpp  ResourceBuffer.hpp  ResourceImage.hpp  ResourceSparse.hpp  ResourceVma.hpp  Sampler.hpp  Semaphore.hpp  Swapchain.hpp  Uploader.hpp  UploaderImpl.hpp
include/Covid/: Core.hpp  Covid.hpp  Denoiser.hpp  GltfLoader.hpp  Instance.hpp  MemoryAllocator.hpp  PipelineLayout.hpp  QueueFamily.hpp  ResourceBuffer.hpp  Sampler.hpp  Semaphore.hpp  Swapchain.hpp  Uploader.hpp
prebuild/include/: Vulkan-Docs  cmake_pch.hxx  coro  glm  renderdoc_app.h  tl  vk_video  vulkan
prebuild/shaders/: Include  Resources  Source  combine.comp.spv  control.comp.spv  distrub.comp.spv  final.comp.spv  native-opaque.frag.spv  native-opaque.geom.spv  native-translucent.frag.spv  native-translucent.geom.spv  overestimate-opaque.frag.spv  overestimate-translucent.frag.spv  path-tracer.comp.spv  path-tracing.comp.spv  post.comp.spv  pre-opaque.frag.spv  pre-opaque.geom.spv  pre-translucent.frag.spv  pre-translucent.geom.spv  recopy.comp.spv  reprojection.comp.spv  resample.comp.spv  reserve.comp.spv  resort.comp.spv  surface.comp.spv  triangles-opaque.geom.spv  triangles-translucent.geom.spv  triangles.vert.spv  underestimate-opaque.frag.spv  underestimate-translucent.frag.spv  (+1 more)
project/: cmake_pch.hxx
shaders/: combine.comp  common.hlsl  compile.bat  compile.cmd  control.comp  distrub.comp  final.comp  native-rasterize.frag  native-rasterize.geom  native-rasterize.vert  overestimate.frag  path-tracer.comp  path-tracing.comp  post.comp  pre-rasterize.frag  pre-rasterize.geom  pre-rasterize.vert  recopy.comp  reprojection.comp  resample.comp  reserve.comp  resort.comp  surface.comp  triangles.geom  underestimate.frag
src/: Aftermath
test/: test.cpp  test.hpp
(+256 files in other folders)
